2010-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/IdeStartup.cs:
	* MonoDevelop.Ide.Gui/IdePreferences.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/IDEStyleOptionsPanel.cs:
	  Allow setting a custom gtk theme for MD.

2010-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs:
	* MonoDevelop.Ide.Gui/IdePreferences.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/IDEStyleOptionsPanel.cs:
	  Add option for selecting the language for the user
	  interface.

	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs:
	* gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs:
	* gtk-gui/MonoDevelop.Ide.OverridesImplementsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewLayoutDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs:
	* gtk-gui/MonoDevelop.Ide.FindInFiles.FindInFilesDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ExportProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.AddinLoadErrorDialog.cs:
	* gtk-gui/MonoDevelop.Ide.CodeTemplates.EditTemplateDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeNewFilesDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.BuildPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.FeatureSelectorDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectFileFormatDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.AddInsPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.LoadSavePanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Components.ExecutionModeComboBox.cs: