@@ -1,3 +1,11 @@
+2010-01-21  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Ide.Gui/HelpOperations.cs: On Mac, use open -a
+	  MonoDoc.app $URL to open MonoDoc urls.
+
+	* Makefile.am:
+	* MonoDevelop.Ide.csproj: Ref System.Web for UrlEncode method.
+
 2010-01-19  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Ide.Gui/IdeStartup.cs:
